# esp-detection

./: .gitignore  README.md  espdet_run.py  pyproject.toml  train.py
deploy/: auto_quantize.py  eval_quantized_model.py  export.py  quantize_aligned.py
