[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esp-detection"
version = "1.0.0"
description = "Lightweight ESP-optimized object detection project based on Ultralytics YOLO."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "AGPL-3.0" }
dependencies = [
    "ultralytics>=8.3.112",
    "torch==2.2.0",
    "torchvision==0.17.0",
    "onnx==1.17.0",
    "onnxsim==0.4.36",
    "onnxruntime>=1.19.0,<1.24",
    "opencv-python==4.11.0.86",
    "numpy==1.24.4",
    "esp-ppq",
]

[tool.uv.sources]
esp-ppq = { git = "https://github.com/espressif/esp-ppq" }

[tool.setuptools]
py-modules = ["espdet_run", "train", "val"]
packages = ["data", "nn", "nn.modules"]

[tool.ruff]
line-length = 120
